--- a/styles/general.css
+++ b/styles/general.css
@@ -8,3 +8,25 @@
 body {
     background-color: bisque;
 }
+
+#hero-section {
+    /*display: flex;
+    flex-direction: column;
+    justify-content: center;
+    */
+}
+
+#hero-section input{
+    display: inline-block;
+    margin-top: 30px;
+    width: 400px;
+    margin-left: 450px;
+    
+
+}
+
+#hero-section button {
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+}
